integ-tests/tests/snapshots/parser__bad_keys__pipe.snap
---
source: integ-tests/tests/parser.rs
expression: error
---
error[unexpected]: 
  ┌─ pipe:1:4
  │
1 │ key|=3
  │    ^ unexpected character '|'


